[package]
name = "rust-sandbox"
version = "0.1.0"
authors = ["Patryk Sandomierski <patryksandomierski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4.14"
log4rs = "1.0.0"
# app
rand = "0.8.4"
